fix viewport height not showing properly on some android devices

--- a/src/components/EmailForm.module.css
+++ b/src/components/EmailForm.module.css
@@ -3,6 +3,7 @@
 	flex-direction: column;
 	gap: 10px;
 	text-align: center;
+	margin-inline: 10px;
 }
 
 @media screen and (max-width: 370px) {
